# pyagb

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  debug.ipynb  log.txt  main_gui_tab_changed.prof  pyproject.toml  requirements.txt  setup.py  test.pmp  test.py  test_image.ipynb
agb/: agb.py  agbrom.py  image.py  img_dump.py  lz77.py  palette.py  pstringold.py  types.py  types_deprecated.py
agb/model/: array.py  bitfield.py  pointer.py  scalar_type.py  structure.py  type.py  unbounded_array.py  union.py
agb/string/: agbstring.py  compile.py  format.py  trie.py
pokescript/: owscript.py
pokestring/: format.py  preprocasm.py  preprocc.py  pstring.py
pymap/: backend.py  behaviour.py  compile.py  configuration.py  constants.py  event.py  footer.py  header.py  image.py  levelscript.py  mapconnection.py  mapevent.py  ow_imgs.py  palette.py  path.py  project.py  pymap_gui.py  resources.py  test_renderer.ipynb  tileset.py  tileset_gui.py  tkinterx.py
pymap/gui/: blocks.py  connection_widget.py  event_widget.py  footer_widget.py  gui.py  header_widget.py  history.py  main.ui  map_widget.py  model.py  properties.py  render.py  resource_tree.py  settings.py  smart_shape.py  test.py  tileset_widget.py  tree.py
pymap/gui/deprecated/: __init__.py  map.py  scalar_type.py  structure_type.py
pymap/model/: backend.py  connection.py  event.py  footer.py  header.py  model.py  tileset.py
pymap/old/: Untitled.ipynb  agbimg.py  block.py  config.py  default_config.json  image.py  mapevent.py  mapfooter.py  mapheader.py  ow_imgs.py  palette.py  path.py  pymap_gui.py  resources.py  tileset.py  tileset_deprecated.py  tileset_gui.py  tkinterx.py
pymap/old/template/: constants
pymap/template/: config  owimgassocs
script/: bin2s.py  pybuild.py  pyconstex.py  pymap2s.py  pymapbatchex.py  pymapbuild.ld  pymapbuild.py  pymapconstex.py  pymapex.py  pymapgui.py  pyowscriptex.py  pypreproc.py  pyproj2s.py  pyset2s.py  pysetex.py
src/agb/: __init__.py  agbrom.py  image.py  lz77.py  palette.py  types.py
src/agb/model/: __init__.py  array.py  bitfield.py  localized_string.py  pointer.py  scalar_type.py  string.py  structure.py  type.py  unbounded_array.py  union.py
src/agb/string/: __init__.py  agbstring.py  compile.py  format.py  trie.py
src/pymap/: __init__.py  __main__.py  backend.py  compile.py  configuration.py  constants.py  debug.py  project.py
src/pymap/config/: description.py
src/pymap/gui/: __init__.py  __main__.py  blocks.py  connection_widget.py  event_widget.py  footer.py  footer_widget.py  gui.py  header.py  (+14 more)
testproject/: proj.pmp  proj.pmp.config  structures.py.ipynb  typedef.py
testproject/.ipynb_checkpoints/: structures.py-checkpoint.ipynb
(+149 files in other folders)
